--- a/config/_default/menus.yml
+++ b/config/_default/menus.yml
@@ -4,54 +4,47 @@ main:
     weight: 1
     params:
       icon:
-        vendor: bs
-        name: book
-        
+        vendor: fas
+        name: book-open
   - name: Languages
     identifier: Languages
     weight: 2
     params:
       icon:
-        vendor: bs
-        name: book
-
+        vendor: fas
+        name: code
   - name: Advanced
     identifier: Advanced
     weight: 3
     params:
       icon:
-        vendor: bs
-        name: book
-
+        vendor: fas
+        name: layer-group
   - name: Applied
     identifier: Applied
     weight: 4
     params:
       icon:
-        vendor: bs
-        name: book
-
+        vendor: fas
+        name: wrench
   - name: Domains
     identifier: Domains
-    weight: 4
+    weight: 5
     params:
       icon:
-        vendor: bs
-        name: book
-
+        vendor: fas
+        name: shapes
   - name: Emerging
     identifier: Emerging
-    weight: 4
+    weight: 6
     params:
       icon:
-        vendor: bs
-        name: book
-
+        vendor: fas
+        name: rocket
   - name: Special
     identifier: Special
-    weight: 4
+    weight: 7
     params:
       icon:
-        vendor: bs
-        name: book
-
+        vendor: fas
+        name: gem
