--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -36,7 +36,7 @@ hb:
   full_width: true
 
   header:
-    brand: Design Patterns Mastery
+    brand: # Design Patterns Mastery
     socials:
       github: MasteryEducation
       twitter: TokenizerCA
