--- a/config/production/hugo.yaml
+++ b/config/production/hugo.yaml
@@ -1,4 +1,4 @@
 # see https://hugomods.com/en/docs/google-analytics/.
 # googleAnalytics: 'G-XXXXXXXXXX' # Google Analytics, please make sure you've imported the Google Analytics module.
-googleAnalytics: 'G-FSS1EFZWY8'
+googleAnalytics: 'G-MESBJQ69F2'
 # disqusShortname: XXXXXX # The Disqus shortname.
